# OAI-for-UAV

./: CMakeLists.txt  CONTRIBUTING.md  MLP.py  README.md  instruction.txt  nr_ul_channel_estimation.c  pre.py  pre_online.py  pre_online_new.py  random_forest_model.pkl  rmf.py  rnn.py  rnn3.py  scaler.pkl  svm.py  test.py  test_gpu.py  xgb0.py  xgb0_pre.py  xgb1.py  xgb2.py
SkyNetGuard-admin-vue/: README-zh.md  package-lock.json  package.json
SkyNetGuard-admin-vue/mock/: table.js  user.js
SkyNetGuard-admin-vue/src/: eslint.config.txt
charts/physims/: values.yaml
ci-scripts/: Jenkinsfile-nrue  Jenkinsfile-physim-deploy  Jenkinsfile-push-registry  Jenkinsfile-tmp-full-ran  Jenkinsfile-tmp-multi-enb-nsa  ci_infra.yaml  cls_cluster.py  cls_cmd.py  cls_containerize.py  cls_module.py  cls_oaicitest.py  cls_physim.py  cls_physim1.py  epc.py  main.py  ran.py  xml_class_list.yml
ci-scripts/as_ue/: aw2s-multi-00102-2x2.cfg
ci-scripts/conf_files/: enb-rcc.band40.25prb.tm1.if4p5.fair-scheduler.conf  enb-rcc.band7.25prb.tm1.if4p5.conf  enb.band38.25prb.rfsim.conf  enb.band38.lte_2x2.100prb.usrpn310.conf  enb.band38.lte_2x2_tm2.100prb.usrpn310.conf  enb.band38.nsa_2x2.100prb.usrpn310.conf  enb.band40.100prb.usrpb200.tm1-defaultscheduler.conf  enb.band40.25prb.usrpb200.conf  enb.band7.100prb.rfsim.conf  enb.band7.100prb.usrpb200.tm1.conf  enb.band7.25prb.l2sim.conf  enb.band7.25prb.rfsim.conf  enb.band7.25prb.usrpb200.conf  enb.band7.25prb.usrpb200.tm1-norrc.conf  enb.band7.25prb.usrpb200.tm1.conf  enb.band7.50prb.rfsim.conf  gnb-cu.sa.f1.conf  (+42 more)
cmake_targets/: build_oai  cross-arm.cmake
common/utils/: CMakeLists.txt  oai_asn1.h  system.c  system.h  utils.c  utils.h
common/utils/LOG/: CMakeLists.txt  log.c  log.h  lttng-log.h  lttng-tp.c  lttng-tp.h
common/utils/LOG/DOC/: log.md  lttng_logs.md
common/utils/T/: T_messages.txt
common/utils/T/DOC/T/: howto_new_trace.patch  wireshark.md
common/utils/T/tracer/: enb.c  event.c  extract.c  extract_config.c  extract_input_subframe.c  extract_output_subframe.c  gnb.c  macpdu2wireshark.c  multi.c  record.c  replay.c  textlog.c  to_vcd.c  ue.c  vcd.c
common/utils/T/tracer/hacks/: dump_nack_signal.c  multi-rru-clean.c  time_meas.c
common/utils/T/tracer/logger/: textlog.c
common/utils/T/tracer/view/: ticktime.c  time.c
common/utils/alg/: find.c  find.h
common/utils/ds/tests/: test_seq_array.c
common/utils/nr/: CMakeLists.txt  nr_common.c  nr_common.h
common/utils/nr/tests/: CMakeLists.txt  test_nr_common.cpp
common/utils/ocp_itti/: intertask_interface.cpp
common/utils/telnetsrv/: CMakeLists.txt  telnetsrv_ci.c  telnetsrv_ciUE.c
common/utils/telnetsrv/DOC/: telnetusage.md
common/utils/threadPool/: CMakeLists.txt  thread-pool.c  thread-pool.h
common/utils/threadPool/test/: CMakeLists.txt  test_thread-pool.c
doc/: Aerial_FAPI_Split_Tutorial.md  BUILD.md  Doxyfile  F1-design.md  FEATURE_SET.md  GET_SOURCES.md  L2NFAPI_NOS1.md  L2NFAPI_S1.md  LDPC_T2_OFFLOAD_SETUP.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_CN5G.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  TESTBenches.md  TESTING_GNB_W_COTS_UE.md  UnitTests.md  code-style-contrib.md  cross-compile.md  physical-simulators.md  tuning_and_security.md
docker/: Dockerfile.base.rhel9  Dockerfile.base.rocky  Dockerfile.base.ubuntu22  Dockerfile.base.ubuntu22.cross-arm64  Dockerfile.build.fhi72.rhel9  Dockerfile.build.fhi72.ubuntu22  Dockerfile.build.rhel9  Dockerfile.build.ubuntu22  Dockerfile.build.ubuntu22.cross-arm64  Dockerfile.eNB.rhel9  Dockerfile.eNB.rocky  Dockerfile.eNB.ubuntu22  Dockerfile.gNB.aerial.ubuntu22  Dockerfile.gNB.aerial.ubuntu22.sanitize-address  Dockerfile.gNB.aw2s.rhel9  Dockerfile.gNB.aw2s.rocky  Dockerfile.gNB.aw2s.ubuntu22  Dockerfile.gNB.fhi72.rhel9  Dockerfile.gNB.fhi72.ubuntu22  Dockerfile.gNB.rhel9  Dockerfile.gNB.rocky  Dockerfile.gNB.ubuntu22  Dockerfile.lteRU.rhel9  Dockerfile.lteRU.ubuntu22  Dockerfile.lteUE.rhel9  Dockerfile.lteUE.rocky  Dockerfile.lteUE.ubuntu22  Dockerfile.nr-cuup.rhel9  Dockerfile.nr-cuup.rocky  Dockerfile.nr-cuup.ubuntu22  Dockerfile.nrUE.rhel9  Dockerfile.nrUE.rocky  Dockerfile.nrUE.ubuntu22  Dockerfile.phySim.rhel9  README.md  debug_core_image.sh
executables/: create_tasks_ue.c  lte-enb.c  lte-ru.c  lte-softmodem.c  lte-softmodem.h  lte-ue.c  lte-uesoftmodem.c  main_ru.c  nr-gnb.c  nr-ru.c  nr-softmodem-common.h  nr-softmodem.c  nr-ue.c  nr-uesoftmodem.c  nr-uesoftmodem.h  rt_profiling.h  ru_control.c  softmodem-common.c  softmodem-common.h
nfapi/: CMakeLists.txt
nfapi/oai_integration/aerial/: CMakeLists.txt  fapi_nvIPC.c  fapi_vnf_p5.c  fapi_vnf_p5.h  fapi_vnf_p7.c  fapi_vnf_p7.h
nfapi/tests/p5/: CMakeLists.txt  nr_fapi_config_request_test.c  nr_fapi_config_response_test.c  nr_fapi_error_indication_test.c  nr_fapi_param_request_test.c  nr_fapi_param_response_test.c  nr_fapi_start_request_test.c  nr_fapi_start_response_test.c  nr_fapi_stop_indication_test.c  nr_fapi_stop_request_test.c
nfapi/tests/p7/: CMakeLists.txt  nr_fapi_dci_inversion_test.c
openair2/LAYER2/NR_MAC_UE/tests/: CMakeLists.txt  test_nr_ue_power_procedures.cpp
openair3/: CMakeLists.txt
openair3/NGAP/MESSAGES/: CMakeLists.txt
openshift/: README.md  oai-clang-bc.yaml  oai-gnb-fhi72-bc.yaml  oai-gnb-fhi72-is.yaml  oai-physim-bc.yaml  ran-build-fhi72-bc.yaml  ran-build-fhi72-is.yaml
(+652 files in other folders)
